--- a/src/main/resources/locale/Messages.properties
+++ b/src/main/resources/locale/Messages.properties
@@ -57,5 +57,5 @@ form.data.NotSaved=User could not be saved.
 form.button.save=Save
 form.button.cancel=Cancel
 form.button.new=New
-form.button.edit=Edit
+form.button.select=*** Please Select ***
 form.button.delete=Delete
