--- a/src/main/resources/locale/Messages.properties
+++ b/src/main/resources/locale/Messages.properties
@@ -10,9 +10,7 @@ welcome=Wel Wel
 date.format=MM/dd/yyyy
 bool.true=yes
 bool.false=no
-
-
-inventory.field.departments = Departments
+inventory.field.department=Departments
 inventory.field.trademarks = Mark
 inventory.field.inventoryTypes = Type
 inventory.field.userId = User
@@ -25,6 +23,19 @@ inventory.field.invoiceNumber = Invoice Number
 inventory.field.invoiceDate = Invoice Date
 inventory.field.price = Price
 inventory.field.barcode = Barcode
+inventory.validate.department=Department is required.
+inventory.validate.trademarks=Trademarks is required.
+inventory.validate.inventoryTypes=InventoryTypes is required.
+inventory.validate.userId=User is required.
+inventory.validate.insertUserId=Insert User is required.
+inventory.validate.usesUser=Use the User is required.
+inventory.validate.insertDate=Insert Date is required.
+inventory.validate.feature=Features is required.
+inventory.validate.model=Model is required.
+inventory.validate.invoiceNumber=Invoice Number is required.
+inventory.validate.invoiceDate=Invoice Date is required.
+inventory.validate.price=Price is required.
+inventory.validate.barcode=Barcode is required.
 
 user.login.lastName=Last Name
 user.login.firstName=First Name
@@ -59,3 +70,5 @@ form.button.cancel=Cancel
 form.button.new=New
 form.button.select=*** Please Select ***
 form.button.delete=Delete
+
+
