--- a/src/main/resources/locale/Messages_es_ES.properties
+++ b/src/main/resources/locale/Messages_es_ES.properties
@@ -4,18 +4,32 @@ title.new=Add new Seed Starter
 lang.eng=English
 lang.es=Spanish
 lang.tr=Turkish
-lang.change=Cambia el idioma
+lang.change=Change the language
 greeting=Hello! Weolcome to our website!
 welcome=Wel Wel
 date.format=MM/dd/yyyy
 bool.true=yes
 bool.false=no
-seedstarter.data=Seed Starter data
+inventory.field.department=Departments
+inventory.field.trademarks=Mark
+inventory.field.inventoryTypes=Type
+inventory.field.userId=User
+inventory.field.insertUserId=Insert User
+inventory.field.usesUser=Use the User
+inventory.field.insertDate=Insert Date
+inventory.field.feature=Features
+inventory.field.model=Model
+inventory.field.invoiceNumber=Invoice Number
+inventory.field.invoiceDate=Invoice Date
+inventory.field.price=Price
+inventory.field.barcode=Barcode
+
 user.login.lastName=Last Name
 user.login.firstName=First Name
 user.login.email=your@mailaddress.com
 user.login.invalid.id=0
 user.login.invalid=Your user name or password was invalid
+user.login.loggedOut=You have been logged out.
 user.login.message=Please Login Sign
 user.login.loginpage=Login Page
 user.login.registration=Registration Form
@@ -23,12 +37,11 @@ user.login.username=Username
 user.login.password=Password
 user.login.hello=Hello
 user.login.login=Sign In
-user.login.signout=Salir
-user.login.loggeduser=Usuario registrado
+user.login.signout=Sign Out
+user.login.loggeduser=Logged user
 user.login.register.button=Register User
 user.login.accessdeniedpage=You do not have permission to access this page.
 user.login.roles=Roles 
-user.login.loggedOut=You have been logged out.
 form.validate.size.firstname=Please use between 2 and 15 characters.
 form.validate.size.lastname=Please use between 2 and 15 characters.
 
@@ -39,3 +52,10 @@ form.validate.size.password=Try one with at least 8 characters.
 form.validate.passwordConfirm=These passwords don't match.
 form.data.saved=User has been registered successfully.
 form.data.NotSaved=User could not be saved.
+form.button.save=Save
+form.button.cancel=Cancel
+form.button.new=New
+form.button.select=*** Please Select ***
+form.button.delete=Delete
+
+
