--- a/src/main/resources/locale/Messages_tr_TR.properties
+++ b/src/main/resources/locale/Messages_tr_TR.properties
@@ -7,23 +7,30 @@ lang.tr=Turkish
 lang.change=Change the language
 greeting=Hello! Weolcome to our website!
 welcome=Wel Wel
-date.format=MM/dd/yyyy
+date.format=dd.MM.yyyy
 bool.true=yes
 bool.false=no
 inventory.field.department=Departments
 inventory.field.trademarks=Mark
 inventory.field.inventoryTypes=Type
-inventory.field.userId=User
-inventory.field.insertUserId=Insert User
 inventory.field.usesUser=Use the User
-inventory.field.insertDate=Insert Date
 inventory.field.feature=Features
 inventory.field.model=Model
 inventory.field.invoiceNumber=Invoice Number
 inventory.field.invoiceDate=Invoice Date
 inventory.field.price=Price
 inventory.field.barcode=Barcode
-
+inventory.validate.department=Department is required.
+inventory.validate.trademarks=Trademarks is required.
+inventory.validate.inventoryTypes=InventoryTypes is required.
+inventory.validate.usesUser=Use the User is required.
+inventory.validate.insertDate=Insert Date is required.
+inventory.validate.feature=Features is required.
+inventory.validate.model=Model is required.
+inventory.validate.invoiceNumber=Invoice Number is required.
+inventory.validate.invoiceDate=Invoice Date is required.
+inventory.validate.price=Price is required.
+inventory.validate.barcode=Barcode is required.
 user.login.lastName=Last Name
 user.login.firstName=First Name
 user.login.email=your@mailaddress.com
@@ -41,10 +48,9 @@ user.login.signout=Sign Out
 user.login.loggeduser=Logged user
 user.login.register.button=Register User
 user.login.accessdeniedpage=You do not have permission to access this page.
-user.login.roles=Roles 
+user.login.roles=Roles
 form.validate.size.firstname=Please use between 2 and 15 characters.
 form.validate.size.lastname=Please use between 2 and 15 characters.
-
 form.validate.NotEmpty=This field is required.
 form.validate.size.username=Please use between 6 and 32 characters.
 form.validate.duplicate.username=Someone already has that username.
